# real_estate_agency_deals_site

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml
real_estate_agency_deals_site/: manage.py
real_estate_agency_deals_site/common/: urls.py  views.py
real_estate_agency_deals_site/common/templates/: base.html
real_estate_agency_deals_site/common/templates/common/: home.html  user_agreement.html
real_estate_agency_deals_site/common/templates/includes/: notification.html  (+5 more)
real_estate_agency_deals_site/common/templatetags/: decimal_math_tags.py
real_estate_agency_deals_site/real_estate_agency/: forms.py  models.py  urls.py  utils.py  views.py
real_estate_agency_deals_site/real_estate_agency/migrations/: 0001_initial.py  0002_initial.py  0003_alter_reviewagency_unique_together.py
real_estate_agency_deals_site/real_estate_agency/templatetags/: price_tags.py  real_estate_agency_tags.py
real_estate_agency_deals_site/real_estate_agency_deals_site/: asgi.py  settings.py  urls.py  wsgi.py
real_estate_agency_deals_site/staff/: forms.py  models.py  urls.py  views.py
real_estate_agency_deals_site/staff/migrations/: 0001_initial.py  0002_initial.py
real_estate_agency_deals_site/user/: endpoints_micro_api.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
real_estate_agency_deals_site/user/migrations/: 0001_initial.py
real_estate_agency_deals_site/user/templatetags/: message_tags.py  notification_tags.py
tests/: conftest.py
tests/common/: test_authorization.py
tests/user/: test_profile.py
(+81 files in other folders)
