[build-system]
requires = ["setuptools==75.1"]
build-backend = "setuptools.build_meta"

[project]
name = "real_estate_agency_deals_site"
version = "1.0.0-b"
description = "A site where real estate agencies present deals on their real estate and offer real estate services."
requires-python = "~=3.12.0"

dependencies = [
  "Django == 5.1.7",
  "Pillow == 11.1.0",
  "python-dotenv == 1.0.1",
  "psycopg[binary,pool] == 3.2.6",
  "transliterate == 1.10.2",
  "pytest == 8.4.2",
  "pytest-django == 4.11.1",
  "selenium == 4.35.0"
]

[tool.setuptools]
py-modules = []

[tool.distutils.egg_info]
egg_base = "."

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "real_estate_agency_deals_site.settings"

pythonpath = "./real_estate_agency_deals_site"
addopts = "-v"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
console_output_style = "count"
